--- a/src/app/modules/main-app/pages/user-top-items/user-top-items-selector/user-top-items-selector.component.html
+++ b/src/app/modules/main-app/pages/user-top-items/user-top-items-selector/user-top-items-selector.component.html
@@ -1,4 +1,4 @@
-<div class="p-2 no-select">
+<div class="select-none p-2 no-select">
   <div class="flex justify-between align-center">
     <button
       class="p-2 w-full flex justify-between align-center text-gray hover:text-primary-light"
