--- a/src/app/shared/features/language-selector/language-selector.html
+++ b/src/app/shared/features/language-selector/language-selector.html
@@ -19,7 +19,7 @@
   @if (this.isOpen()) {
 
   <div
-    class="absolute top-full left-0 right-0 mt-2 rounded-md border border-solid border-gray bg-dark/75 backdrop-blur-sm z-100"
+    class="absolute top-full left-0 right-0 mt-2 rounded-md border border-solid border-gray z-100"
   >
     @for (locale of supportedLocales; track $index) {
     <button
