--- a/src/app/modules/main-app/pages/extended-history/extended-history.component.html
+++ b/src/app/modules/main-app/pages/extended-history/extended-history.component.html
@@ -40,7 +40,7 @@
       >
     </div>
     <div>
-      @if (this.loadingState() === 'all-resolved' || this.loadingState() === 'resolved') {
+      @if (this.loadingState() === 'all-resolved' || this.loadingState() === 'resolved' || this.loadingState() === 'idle') {
         <app-user-top-extended />
       } @else if (this.loadingState() === 'loading') {
         <div class="w-full flex justify-center align-center h-">
