--- a/src/app/modules/main-app/pages/extended-history/user-top-extended/user-top-extended.html
+++ b/src/app/modules/main-app/pages/extended-history/user-top-extended/user-top-extended.html
@@ -1,30 +1,28 @@
 <div>
   <div
-  class="grid grid-cols-[repeat(auto-fill,minmax(220px,1fr))] gap-4 sm:grid-cols-[repeat(auto-fill,minmax(260px,1fr))] lg:grid-cols-[repeat(auto-fill,minmax(320px,1fr))]"
+    class="grid grid-cols-[repeat(auto-fill,minmax(220px,1fr))] gap-4 sm:grid-cols-[repeat(auto-fill,minmax(260px,1fr))] lg:grid-cols-[repeat(auto-fill,minmax(320px,1fr))]"
   >
     @for (track of this.topTracks(); track $index) {
-      <div class="w-full h-full">
-        <app-card-simple-track
+    <div class="w-full h-full">
+      <app-card-simple-track
         [track]="track"
         [index]="$index + 1"
-        [timeListened]="this.getTimeListened(track.id)"
-        ></app-card-simple-track>
-      </div>
+        [timeListened]="this.getTrackTimeListenedTotal(track.id)"
+      ></app-card-simple-track>
+    </div>
     }
   </div>
   <div class="w-full flex justify-center align-center mt-4">
-      @if (this.loadingState === 'idle' || this.loadingState === 'resolved') {
-        <button class="w-full p-4" (click)="this.loadMoreItems()">
-          <p class="font-3xl">load more</p>
-        </button>
-      } @else if (
-        this.loadingState === 'loading' || this.loadingState === 'appending'
-      ) {
-        <p class="font-3xl p-4">loading...</p>
-      } @else if (this.loadingState === 'all-resolved') {
-        <p class="font-3xl p-4">all available data is loaded</p>
-      } @else {
-        <p class="font-3xl p-4">error loading data</p>
-      }
-    </div>
+    @if (this.loadingState === 'idle' || this.loadingState === 'resolved') {
+    <button class="w-full p-4" (click)="this.loadMoreItems()">
+      <p class="font-3xl">load more</p>
+    </button>
+    } @else if ( this.loadingState === 'loading' || this.loadingState === 'appending' ) {
+    <p class="font-3xl p-4">loading...</p>
+    } @else if (this.loadingState === 'all-resolved') {
+    <p class="font-3xl p-4">all available data is loaded</p>
+    } @else {
+    <p class="font-3xl p-4">error loading data</p>
+    }
+  </div>
 </div>
