--- a/src/app/modules/main-app/pages/extended-history-upload/extended-history-upload-form/extended-history-upload-form.component.html
+++ b/src/app/modules/main-app/pages/extended-history-upload/extended-history-upload-form/extended-history-upload-form.component.html
@@ -39,7 +39,7 @@
       <div class="w-full h-full bg-dark shadow rounded-md p-4">
         <div class="flex items-center gap-3">
           <div class="flex-shrink-0">
-            <div [class]="'h-8 w-8 rounded-full flex items-center justify-center bg-pure-white text-primary'">
+            <div class="'h-8 w-8 rounded-full flex items-center justify-center bg-pure-white text-primary'">
               @switch (this.processingStatus()) {
                 @case ('all-prepared') {
                   <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
