--- a/src/app/shared/features/language-selector/language-selector.html
+++ b/src/app/shared/features/language-selector/language-selector.html
@@ -1,7 +1,7 @@
 <div class="language-selector min-w-[120px] relative">
   <button
     class="w-full flex justify-between items-center py-2 px-4 bg-dark/75 backdrop-blur-sm border border-gray rounded-md"
-    (click)="toggleDropdown()"
+    (click)="this.isOpen.set(!this.isOpen())"
     [disabled]="isLoading()"
   >
     <span> {{ getCurrentLanguageDisplay() }} </span>
@@ -18,9 +18,7 @@
 
   @if (this.isOpen()) {
 
-  <div
-    class="absolute top-full left-0 right-0 mt-2 rounded-md border border-solid border-gray z-100"
-  >
+  <div class="absolute top-full left-0 right-0 mt-2 rounded-md border border-solid border-gray z-100">
     @for (locale of supportedLocales; track $index) {
     <button
       class="w-full py-2 px-4 text-white overflow-hidden rounded-md bg-dark/75 backdrop-blur-sm"
