--- a/src/libs/screen-toasts-notifications/ui/screen-toaster-notifications/screen-toaster-notifications.component.scss
+++ b/src/libs/screen-toasts-notifications/ui/screen-toaster-notifications/screen-toaster-notifications.component.scss
@@ -1,10 +1,34 @@
 :host {
   pointer-events: none;
-
   height: 100%;
   width: 100%;
 }
 
- .item * {
+.item * {
   pointer-events: all;
+}
+
+// Animation for new notifications
+.item {
+  animation: slideInRight 0.3s ease-out;
+}
+
+@keyframes slideInRight {
+  from {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+// Line clamp utility for message truncation
+.line-clamp-3 {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
