--- a/src/app/shared/widgets/nav-bar/nav-bar.component.html
+++ b/src/app/shared/widgets/nav-bar/nav-bar.component.html
@@ -7,7 +7,7 @@
         <h1
           class="w-full justify-center text-center text-lg md:text-2xl font-black text-primary hover:text-primary-light"
         >
-          {{ 'vibesTrackerTitle' | translate }}
+          {{ '@@vibesTrackerTitle' | translate }}
         </h1>
       </a>
     </div>
@@ -16,7 +16,7 @@
         <p
           class="w-full text-center text-base md:text-lg font-black text-gray hover:text-white"
         >
-          {{ 'nav_simpleTop' | translate }}
+          {{ '@@nav_simpleTop' | translate }}
         </p>
       </a>
     </div>
@@ -25,7 +25,7 @@
         <p
           class="w-full text-center text-base md:text-lg font-black text-gray hover:text-white"
         >
-          {{ 'nav_extendedTop' | translate }}
+          {{ '@@nav_extendedTop' | translate }}
         </p>
       </a>
     </div>
