--- a/src/app/modules/login/login-page/login.component.html
+++ b/src/app/modules/login/login-page/login.component.html
@@ -1,16 +1,16 @@
 <div class="bg-dark p-8 m-8 rounded-sm flex flex-col items-center justify-center gap-4">
   <div>
-    <h1 class="text-3xl font-black">{{ 'vibesTrackerTitle' | translate }}</h1>
+    <h1 class="text-3xl font-black">{{ '@@vibesTrackerTitle' | translate }}</h1>
   </div>
   @if (this.loadingState === 'idle' || this.loadingState === 'error') {
     <a [href]="this.getAuthorizationUrl()" class="w-full">
       <button class="w-full py-2 bg-primary rounded-sm hover:bg-primary-light">
-        <p class="font-black">{{ 'login_loginWithSpotify' | translate }}</p>
+        <p class="font-black">{{ '@@login_loginWithSpotify' | translate }}</p>
       </button>
     </a>
   } @else if (this.loadingState === 'loading') {
     <div class="flex flex-col items-center justify-center gap-2">
-      <p>{{ 'login_authorizing-loading' | translate }}</p>
+      <p>{{ '@@login_authorizing-loading' | translate }}</p>
       <div class="h-[32px] w-[32px]">
         <app-loading-spinner />
       </div>
