--- a/src/app/modules/main-app/pages/settings/settings.component.html
+++ b/src/app/modules/main-app/pages/settings/settings.component.html
@@ -1,22 +1,22 @@
 <div class="w-full h-max flex flex-col gap-4 p-4">
   <div class="w-full gap-2 flex flex-col justify-center sm:w-[450px]">
-    <h2 class="text-xl font-bold">{{ 'settings_title-language' | translate }}</h2>
+    <h2 class="text-xl font-bold">{{ '@@settings_title-language' | translate }}</h2>
     <app-language-selector />
   </div>
 
   <div class="w-full gap-2 flex flex-col justify-center sm:w-[450px]">
-    <h2 class="text-xl font-bold">{{ 'settings_title-general' | translate }}</h2>
+    <h2 class="text-xl font-bold">{{ '@@settings_title-general' | translate }}</h2>
 
     <button class="text-lg w-full py-1 px-12 bg-primary rounded-sm hover:bg-primary-light" (click)="this.logOut()">
-      {{ 'settings_logout' | translate }}
+      {{ '@@settings_logout' | translate }}
     </button>
 
     <button class="text-lg w-full py-1 px-12 bg-primary rounded-sm hover:bg-primary-light" (click)="this.deleteExtendedHistory()">
-      {{ 'settings_deleteExtendedHistory' | translate }}
+      {{ '@@settings_deleteExtendedHistory' | translate }}
     </button>
 
     <button class="text-lg w-full py-1 px-12 bg-primary rounded-sm hover:bg-primary-light" (click)="this.clearIgnoredTracks()">
-      {{ 'settings_clearIgnoredTracks' | translate }}
+      {{ '@@settings_clearIgnoredTracks' | translate }}
     </button>
   </div>
 </div>
