--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -19,6 +19,10 @@
   --primary-color: #e41138;
   --primary-light-color: #ef2e52;
 
+  --secondary-dark-color: #ebc1d9;
+  --secondary-color: #e2a3c7;
+  --secondary-light-color: #d883b3;
+
   --small-font-size: 1rem;
   --medium-font-size: 16px;
   --medium-large-font-size: 18px;
