--- a/src/app/shared/widgets/nav-bar/nav-bar.component.html
+++ b/src/app/shared/widgets/nav-bar/nav-bar.component.html
@@ -4,27 +4,21 @@
   <div class="box-border flex gap-4 lg:gap-12">
     <div class="box-border flex items-center">
       <a routerLink="/">
-        <h1
-          class="w-full justify-center text-center text-lg md:text-2xl font-black text-primary hover:text-primary-light"
-        >
+        <h1 appLetterHover="scale" data-text="'@@vibesTrackerTitle' | translate" class="w-full justify-center text-center text-lg md:text-2xl font-black text-pretty">
           {{ '@@vibesTrackerTitle' | translate }}
         </h1>
       </a>
     </div>
     <div class="box-border flex items-center">
       <a routerLink="/top">
-        <p
-          class="w-full text-center text-base md:text-lg font-black text-gray hover:text-white"
-        >
+        <p class="w-full text-center text-base md:text-lg font-black text-gray hover:text-white">
           {{ '@@nav_simpleTop' | translate }}
         </p>
       </a>
     </div>
     <div class="box-border flex items-center">
       <a routerLink="/extended-history">
-        <p
-          class="w-full text-center text-base md:text-lg font-black text-gray hover:text-white"
-        >
+        <p class="w-full text-center text-base md:text-lg font-black text-gray hover:text-white">
           {{ '@@nav_extendedTop' | translate }}
         </p>
       </a>
