--- a/src/app/shared/widgets/nav-bar/nav-bar.component.html
+++ b/src/app/shared/widgets/nav-bar/nav-bar.component.html
@@ -4,7 +4,7 @@
   <div class="box-border flex gap-4 lg:gap-12">
     <div class="box-border flex items-center">
       <a routerLink="/">
-        <h1 appLetterHover="scale" data-text="'@@vibesTrackerTitle' | translate" class="w-full justify-center text-center text-lg md:text-2xl font-black text-pretty">
+        <h1 class="w-full justify-center text-center text-lg md:text-2xl font-black text-pretty">
           {{ '@@vibesTrackerTitle' | translate }}
         </h1>
       </a>
