--- a/src/styles/classes.scss
+++ b/src/styles/classes.scss
@@ -93,53 +93,29 @@
 
 // #region TextPrettier
 
-// .text-pretty {
-//   background: linear-gradient(
-//     270deg,
-//     var(--secondary-color),
-//     var(--primary-dark-color),
-//     var(--primary-light-color),
-//     var(--primary-color),
-//     var(--secondary-light-color),
-//     var(--secondary-dark-color)
-//   );
-//   background-size: 600% 600%;
-//   -webkit-background-clip: text;
-//   -webkit-text-fill-color: transparent;
-//   animation: shift 20s ease infinite;
-// }
-
 .text-pretty {
   position: relative;
-  display: inline-block;
-  font-size: 3rem;
-  font-weight: bold;
-}
-
-.text-pretty::before {
-  content: attr(data-text);
-  position: absolute;
-  top: 0;
-  left: 0;
+  z-index: 5;
   background: linear-gradient(
     270deg,
-    var(--secondary-color),
     var(--primary-dark-color),
     var(--primary-light-color),
-    var(--primary-color),
-    var(--secondary-light-color),
-    var(--secondary-dark-color)
+    var(--secondary-color),
+    var(--secondary-dark-color),
+    var(--primary-color)
   );
   background-size: 600% 600%;
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation: shift 20s ease infinite;
-  pointer-events: none;
+  animation: shift 5s ease infinite;
 }
-
-.text-pretty span {
-  opacity: 0;
+.text-pretty:hover {
+  transition: 0.2s;
+  animation-play-state: paused;
+  text-shadow:
+    0 0 15px rgba(255, 120, 180, 0.05),
+    0 0 5px rgba(255, 120, 180, 0.1);
 }
 
 @keyframes shift {
@@ -152,14 +128,6 @@
   100% {
     background-position: 0% 50%;
   }
-}
-
-.text-pretty:hover {
-  transition: 0.2s;
-  animation-play-state: paused;
-  text-shadow:
-    0 0 15px rgba(255, 120, 180, 0.05),
-    0 0 5px rgba(255, 120, 180, 0.1);
 }
 
 // #endregion Text
