--- a/src/styles/classes.scss
+++ b/src/styles/classes.scss
@@ -93,6 +93,56 @@
 
 // #region TextPrettier
 
+.text-pretty-broken {
+  display: inline-block;
+  background: linear-gradient(
+    270deg,
+    var(--secondary-color),
+    var(--primary-dark-color),
+    var(--primary-light-color),
+    var(--primary-color),
+    var(--secondary-light-color),
+    var(--secondary-dark-color)
+  );
+  background-size: 600% 600%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: shift 20s ease infinite;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.text-pretty-alternative {
+  position: relative;
+  display: inline-block;
+  font-size: 2rem;
+  font-weight: bold;
+  background: linear-gradient(
+    270deg,
+    var(--secondary-color),
+    var(--primary-dark-color),
+    var(--primary-light-color),
+    var(--primary-color),
+    var(--secondary-light-color),
+    var(--secondary-dark-color)
+  );
+  background-size: 600% 600%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: shift 20s ease infinite;
+}
+
+.text-pretty-alternative span {
+  background: inherit;
+  background-clip: inherit;
+  -webkit-background-clip: inherit;
+  -webkit-text-fill-color: inherit;
+  /* Key addition: prevent background repositioning */
+  background-attachment: inherit;
+}
+
 .text-pretty {
   position: relative;
   z-index: 5;
