--- a/src/app/modules/main-app/pages/extended-history/user-top-extended/user-top-extended.html
+++ b/src/app/modules/main-app/pages/extended-history/user-top-extended/user-top-extended.html
@@ -7,8 +7,11 @@
       <app-card-simple-track
         [track]="track"
         [index]="$index + 1"
-        [timeListened]="this.getTrackTimeListenedTotal(track.id)"
-      ></app-card-simple-track>
+        [userTrackStats]="{
+          timeListened: this.getTrackTimeListenedTotal(track.id),
+          timesPlayed: this.getTrackTimesPlayedTotal(track.id)
+        }"
+      />
     </div>
     }
   </div>
