--- a/src/app/shared/widgets/cards/card-simple-track/card-simple-track.component.html
+++ b/src/app/shared/widgets/cards/card-simple-track/card-simple-track.component.html
@@ -1,90 +1,100 @@
-@if (!this.ignoringThisTrack()) {
-  <div
-    class="w-full h-full flex items-center gap-3 box-border p-2 rounded-md bg-dark shadow-sm hover:shadow-md transition-all duration-200 ease-in-out relative"
-  >
-    @if (this.track() && this.track().type) {
-      <!-- IMAGE -->
-      <div class="flex-1">
-        <div class="w-full h-full aspect-square block">
-          <a routerLink="/track/{{ this.track().id }}">
-            <img
-              class="w-full h-full overflow-hidden object-cover rounded-sm"
-              loading="lazy"
-              alt="{{ this.track().name || '' }} cover"
-              [src]="this.track().album.images.length > 0 ? this.track().album.images[0].url : ''"
-            />
+<div
+  class="w-full h-full flex items-center gap-3 box-border p-2 rounded-md bg-dark shadow-sm hover:shadow-md transition-all duration-200 ease-in-out relative"
+>
+  @if (this.track() && this.track().type) {
+    <!-- IMAGE -->
+    <div class="flex-1">
+      <div class="w-full h-full aspect-square block">
+        <a routerLink="/track/{{ this.track().id }}">
+          <img
+            class="w-full h-full overflow-hidden object-cover rounded-sm"
+            loading="lazy"
+            alt="{{ this.track().name || '' }} cover"
+            [src]="this.track().album.images.length > 0 ? this.track().album.images[0].url : ''"
+          />
+        </a>
+      </div>
+    </div>
+
+    <!-- TODO -->
+    <div class="absolute top-2 right-2">
+      <div class="relative" (click)="$event.stopPropagation()">
+        <div
+          class="flex gap-[2px] p-2 w-max h-max bg-dark-light rounded-md cursor-pointer"
+          (click)="this.showTrackMenu.set(!this.showTrackMenu())"
+        >
+          <div class="w-[4px] h-[4px] rounded-full bg-gray"></div>
+          <div class="w-[4px] h-[4px] rounded-full bg-gray"></div>
+          <div class="w-[4px] h-[4px] rounded-full bg-gray"></div>
+        </div>
+
+        @if (this.showTrackMenu()) {
+          <div class="flex flex-col gap-2 p-2 w-max h-max bg-dark-light rounded-md absolute top-8 right-0 z-10">
+            <button class="text-left text-sm text-gray hover:text-white" (click)="this.ignoreTrack()">
+              <span>ignore this track</span>
+            </button>
+          </div>
+        }
+      </div>
+    </div>
+
+    <!-- TRACK DATA -->
+    <div class="flex-1 overflow-hidden relative">
+      <!-- INDEX AND STUFF -->
+      <div>
+        <div>
+          <p class="font-black text-gray flex flex-col sm:flex-row items-center justify-start gap-1">
+            @if ((this.userTrackStats()?.timeListened ?? 0) > 0) {
+              <span class="text-base w-full sm:w-max">{{ this.index() }}#</span>
+              <span class="text-base w-full sm:w-max">
+                <span class="hidden sm:inline"> - </span>
+                <span>
+                  {{ this.userTrackStats()?.timeListened ?? 0 | timeSimple }}
+                </span>
+              </span>
+            } @else {
+              <span class="text-xl w-full">
+                <span> {{ this.index() }}# </span>
+              </span>
+            }
+          </p>
+        </div>
+      </div>
+
+      <div>
+        <!-- TRACK NAME -->
+        <div>
+          <a class="w-min" routerLink="/track/{{ this.track().id }}">
+            <p class="font-bold truncate-1">{{ this.track().name }}</p>
           </a>
         </div>
-      </div>
 
-      <!-- TODO -->
-      <!-- <div
-        class="absolute top-2 right-2 p-2 w-max h-max bg-dark-light flex gap-[2px] rounded-md cursor-pointer"
-        (click)="this.ignoreTrack()"
-      >
-        <div class="w-[4px] h-[4px] rounded-full bg-gray"></div>
-        <div class="w-[4px] h-[4px] rounded-full bg-gray"></div>
-        <div class="w-[4px] h-[4px] rounded-full bg-gray"></div>
-      </div> -->
-
-      <!-- TRACK DATA -->
-      <div class="flex-1 overflow-hidden relative">
-        <!-- INDEX AND STUFF -->
+        <!-- ARTIST NAMES LIST -->
         <div>
-          <div>
-            <p class="font-black text-gray flex flex-col sm:flex-row items-center justify-start gap-1">
-              @if (this.timeListened() !== 0) {
-                <span class="text-base w-full sm:w-max">{{ this.index() }}#</span>
-                <span class="text-base w-full sm:w-max">
-                  <span class="hidden sm:inline"> - </span>
-                  <span>
-                    {{ this.timeListened() | timeSimple }}
-                  </span>
-                </span>
+          <p class="truncate-2 text-xs text-gray">
+            @for (artist of track().artists; track $index) {
+              @if ($index < track().artists.length - 1) {
+                <a routerLink="/artist/{{ artist.id }}">
+                  <span>{{ artist.name }}, </span>
+                </a>
               } @else {
-                <span class="text-xl w-full">
-                  <span> {{ this.index() }}# </span>
-                </span>
+                <a routerLink="/artist/{{ artist.id }}">
+                  <span>{{ artist.name }} </span>
+                </a>
               }
-            </p>
-          </div>
+            }
+          </p>
         </div>
 
+        <!-- ALBUM NAME -->
         <div>
-          <!-- TRACK NAME -->
-          <div>
-            <a class="w-min" routerLink="/track/{{ this.track().id }}">
-              <p class="font-bold truncate-1">{{ this.track().name }}</p>
+          <p class="truncate-1 text-xs text-gray">
+            <a routerLink="/album/{{ this.track().album.id }}">
+              <span>{{ this.track().album.name }}</span>
             </a>
-          </div>
-
-          <!-- ARTIST NAMES LIST -->
-          <div>
-            <p class="truncate-2 text-xs text-gray">
-              @for (artist of track().artists; track $index) {
-                @if ($index < track().artists.length - 1) {
-                  <a routerLink="/artist/{{ artist.id }}">
-                    <span>{{ artist.name }}, </span>
-                  </a>
-                } @else {
-                  <a routerLink="/artist/{{ artist.id }}">
-                    <span>{{ artist.name }} </span>
-                  </a>
-                }
-              }
-            </p>
-          </div>
-
-          <!-- ALBUM NAME -->
-          <div>
-            <p class="truncate-1 text-xs text-gray">
-              <a routerLink="/album/{{ this.track().album.id }}">
-                <span>{{ this.track().album.name }}</span>
-              </a>
-            </p>
-          </div>
+          </p>
         </div>
       </div>
-    }
-  </div>
-}
+    </div>
+  }
+</div>
